<resources>
    <string name="app_name">eKichabi</string>
    <string name="favorites_tab">Favorites</string>
    <string name="search_tab">Search</string>
    <string name="browse_tab">Browse</string>
    <string name="select_village">Select Village</string>
    <string name="select_district">Select District</string>
    <string name="select_sector">Select Sector</string>
    <string name="call_button">Call</string>
    <string name="favorite_button">Favorite</string>
    <string name="save_contact_button">Save Contact</string>
    <string name="save_contact_button_short">Save</string>
    <string name="remove_favorite_button">Remove Favorite</string>
    <string name="business_name_placeholder" translatable="false">Business A</string>
    <string name="business_location_placeholder" translatable="false">Location A</string>
    <string name="business_phone_number_placeholder" translatable="false">Phone Number A</string>
    <string name="business_sector_placeholder" translatable="false">Sector A</string>
    <string name="business_subsector_placeholder" translatable="false">Subsector A</string>
    <string name="location_label">Location:</string>
    <string name="phone_number_label">Phone:</string>
    <string name="sector_label">Sector:</string>
    <string name="subsector_label">Subsector:</string>
    <string name="clear_filter_entry">All</string>
    <string name="clear_district_filter_entry">All districts</string>
    <string name="clear_village_filter_entry">All villages</string>
    <string name="clear_sector_filter_entry">All sectors</string>
    <string name="no_businesses_found">No businesses found.</string>
    <string name="no_favorite_businesses_found">No favorite businesses found.</string>
    <string name="no_favorite_businesses_subtext">To add a favorite, click on the star icon next to the business name</string>
    <string name="back_button">Back</string>
    <string name="settings_title">Settings</string>
    <string name="language_switch">Switch Language</string>
    <string name="select_text_size">Select Text Size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="xlarge">Extra Large</string>
    <string name="swahili">Swahili</string>
    <string name="english">English</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="more_details">Details</string>
    <string name="save_contact_permission_denied">Contact saving failed because we do not have permission to access your contacts. To change permissions for eKichabi v2.0, exit the application and go to Settings.</string>
    <string name="no_phone_number">None</string>
    <string name="help">Help</string>
    <string name="is_added_to_Favorite">is added to Favorite</string>
    <string name="is_removed_from_Favorite">is removed from Favorite</string>
    <string name="help_call">Click this icon to call the business</string>
    <string name="help_save">Click this icon to save the business to your contacts</string>
    <string name="help_detail">Click anywhere on the business for detailed information</string>
    <string name="select_subsector">Select Subsector</string>
    <string name="all_subsector">All subsector</string>
    <string name="get_started">Get started</string>
    <string name="owner">Owner: </string>
    <string name="no_access">You have reached the eKichabi service. We are only sharing it with a few phone numbers currently, please check back in a couple months!</string>
    <string name="no_access_sw" translatable="false">Umefikia huduma ya eKichabi. Tunahusisha namba chache za simu kwasasa, tafadhali angalia tena baada ya miezi michache.</string>
    <string name="dial_code_regex" translatable="false">\\+(?:998|996|995|994|993|992|977|976|975|974|973|972|971|970|968|967|966|965|964|963|962|961|960|886|880|856|855|853|852|850|692|691|690|689|688|687|686|685|683|682|681|680|679|678|677|676|675|674|673|672|670|599|598|597|595|593|592|591|590|509|508|507|506|505|504|503|502|501|500|423|421|420|389|387|386|385|383|382|381|380|379|378|377|376|375|374|373|372|371|370|359|358|357|356|355|354|353|352|351|350|299|298|297|291|290|269|268|267|266|265|264|263|262|261|260|258|257|256|255|254|253|252|251|250|249|248|246|245|244|243|242|241|240|239|238|237|236|235|234|233|232|231|230|229|228|227|226|225|224|223|222|221|220|218|216|213|212|211|98|95|94|93|92|91|90|86|84|82|81|66|65|64|63|62|61|60|58|57|56|55|54|53|52|51|49|48|47|46|45|44\\D?1624|44\\D?1534|44\\D?1481|44|43|41|40|39|36|34|33|32|31|30|27|20|7|1\\D?939|1\\D?876|1\\D?869|1\\D?868|1\\D?849|1\\D?829|1\\D?809|1\\D?787|1\\D?784|1\\D?767|1\\D?758|1\\D?721|1\\D?684|1\\D?671|1\\D?670|1\\D?664|1\\D?649|1\\D?473|1\\D?441|1\\D?345|1\\D?340|1\\D?284|1\\D?268|1\\D?264|1\\D?246|1\\D?242|1)\\D?</string>
    <string name="logger_filename" translatable="false">android.logs</string>
    <string name="login">Login</string>
    <string name="check_whitelist">Checking whitelist…</string>
    <string name="redirect">Redirecting…</string>
    <string name="reenter_pn">Re-enter the phone number</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="loading">Loading…</string>
    <string name="no_match_found">Hakuna inayolingana iliyopatikana</string>
    <string name="refresh">Refreshing…</string>
    <string name="finished">Finished</string>
</resources>