<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/settings_close"
        android:layout_width="40dp"
        android:layout_height="0dp"
        android:layout_gravity="top|right"
        android:clickable="true"
        android:contentDescription="close"
        android:src="@drawable/baseline_close_black_36"
        app:layout_constraintBottom_toTopOf="@+id/divider_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding"
        android:paddingBottom="@dimen/padding"
        android:paddingStart="@dimen/padding"
        android:paddingEnd="@dimen/padding"
        android:text="@string/settings_title"
        android:textSize="?attr/font_medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/divider_1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/black"
        android:paddingTop="@dimen/padding"
        android:paddingBottom="@dimen/padding"
        app:layout_constraintTop_toBottomOf="@id/settings_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/switch_font_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="124dp"
        android:paddingStart="@dimen/padding"
        android:paddingTop="@dimen/padding"
        android:paddingEnd="@dimen/padding"
        android:text="@string/select_text_size"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_1" />

    <LinearLayout
        android:id="@+id/switch_font_size_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:paddingStart="@dimen/padding"
        app:layout_constraintBottom_toTopOf="@id/divider_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_font_size">

        <RadioGroup
            android:id="@+id/switch_font_size_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical"
            android:paddingTop="@dimen/padding"
            android:paddingBottom="@dimen/padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/small" />

            <RadioButton
                android:id="@+id/medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium" />

            <RadioButton
                android:id="@+id/large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/large" />

            <RadioButton
                android:id="@+id/extra_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xlarge" />
        </RadioGroup>
    </LinearLayout>


    <View
        android:id="@+id/divider_2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/black"
        android:paddingTop="@dimen/padding"
        android:paddingBottom="@dimen/padding"
        app:layout_constraintBottom_toTopOf="@+id/switch_language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_font_size_layout" />

    <LinearLayout
        android:id="@+id/switch_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding"
        android:backgroundTint="?attr/colorPrimary"
        android:orientation="horizontal"
        android:paddingTop="@dimen/padding"
        app:layout_constraintBottom_toTopOf="@id/divider_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_2">

        <Button
            android:id="@+id/language_swahili"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/padding"
            android:layout_marginEnd="@dimen/padding"
            android:backgroundTint="?attr/colorPrimary"
            android:text="@string/swahili"
            app:layout_constraintEnd_toStartOf="@id/language_english"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/language_english"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/padding"
            android:backgroundTint="?attr/colorPrimary"
            android:text="@string/english"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/language_swahili" />
    </LinearLayout>

    <View
        android:id="@+id/divider_3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/black"
        android:paddingTop="@dimen/padding"
        android:paddingBottom="@dimen/padding"
        app:layout_constraintBottom_toTopOf="@id/apply_settings_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch_language" />

    <Button
        android:id="@+id/apply_settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding"
        android:paddingBottom="@dimen/padding"
        android:text="@string/apply_changes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_3" />

</androidx.constraintlayout.widget.ConstraintLayout>