<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/single_business_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/business_close"
            android:layout_width="40dp"
            android:layout_height="0dp"
            android:layout_gravity="top|right"
            android:clickable="true"
            android:paddingEnd="@dimen/padding"
            android:contentDescription="close"
            android:src="@drawable/baseline_close_black_36"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/single_business_name"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/single_business_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:scrollHorizontally="true"
            android:text="@string/business_name_placeholder"
            android:textSize="?attr/font_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/single_business_sector_icon"
            app:layout_constraintStart_toEndOf="@id/business_close"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/single_business_sector_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:paddingStart="@dimen/padding"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/single_business_name"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/black"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/single_business_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal|center_vertical"
        android:minWidth="400dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/divider">

        <LinearLayout
            android:id="@+id/single_business_data_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="30dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/single_business_owner_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/single_business_owner_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/owner"
                    android:textSize="?attr/font_small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/single_business_ower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding"
                    android:paddingEnd="@dimen/padding"
                    android:text=""
                    android:textSize="?attr/font_small"
                    app:layout_constraintStart_toEndOf="@id/single_business_owner_label" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/single_business_location_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/single_business_location_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_label"
                    android:textSize="?attr/font_small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/single_business_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding"
                    android:paddingEnd="@dimen/padding"
                    android:text="@string/business_location_placeholder"
                    android:textSize="?attr/font_small"
                    app:layout_constraintStart_toEndOf="@id/single_business_location_label" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/single_business_sector_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/single_business_location_group">

                <TextView
                    android:id="@+id/single_business_sector_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sector_label"
                    android:textSize="?attr/font_small"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/single_business_sector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding"
                    android:paddingEnd="@dimen/padding"
                    android:text="@string/business_sector_placeholder"
                    android:textSize="?attr/font_small"
                    app:layout_constraintStart_toEndOf="@id/single_business_subsector_label" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/single_business_subsector_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/single_business_sector_group">

                <TextView
                    android:id="@+id/single_business_subsector_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subsector_label"
                    android:textSize="?attr/font_small"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/single_business_subsector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding"
                    android:paddingEnd="@dimen/padding"
                    android:text="@string/business_subsector_placeholder"
                    android:textSize="?attr/font_small"
                    app:layout_constraintStart_toEndOf="@id/single_business_phone_number_label" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/single_business_phone_number_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/single_business_sector_group">


                <TextView
                    android:id="@+id/single_business_phone_number_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number_label"
                    android:textSize="?attr/font_small"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/single_business_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding"
                    android:paddingEnd="@dimen/padding"
                    android:text="@string/business_phone_number_placeholder"
                    android:textSize="?attr/font_small"
                    app:layout_constraintStart_toEndOf="@id/single_business_phone_number_label" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/single_business_button_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@id/single_business_data_group">

            <Button
                android:id="@+id/single_business_call_button"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/padding"
                android:layout_marginEnd="@dimen/padding"
                android:layout_weight="1.05"
                android:drawableTop="@drawable/call_icon"
                android:maxHeight="170dp"
                android:text="@string/call_button"
                android:textSize="?attr/font_small"
                app:layout_constraintEnd_toStartOf="@id/single_business_favorite_button"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/single_business_favorite_button"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/padding"
                android:layout_weight="0.95"
                android:drawableTop="@android:drawable/btn_star_big_off"
                android:text="@string/favorite_button"
                android:textSize="?attr/font_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/single_business_call_button" />
        </LinearLayout>

        <Button
            android:id="@+id/single_business_save_contact_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding"
            android:layout_marginEnd="@dimen/padding"
            android:drawableTop="@drawable/save_contact_icon"
            android:text="@string/save_contact_button"
            android:textSize="?attr/font_small" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>