<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/help_close"
        android:layout_width="48dp"
        android:layout_height="55dp"
        android:layout_gravity="top|right"
        android:clickable="true"
        android:contentDescription="close"
        android:src="@drawable/baseline_close_black_36"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_divider_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/help_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding"
        android:paddingTop="@dimen/padding"
        android:paddingEnd="@dimen/padding"
        android:paddingBottom="@dimen/padding"
        android:text="@string/help"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/horizontal_divider_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/help_close" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/horizontal_divider_1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/help_text"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:weightSum="4">

            <LinearLayout
                android:id="@+id/help_detail"

                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/padding">


                <TextView
                    android:id="@+id/help_detail_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding"
                    android:layout_marginEnd="8dp"
                    android:gravity="start"
                    android:text="@string/help_detail"
                    android:textSize="20sp" />

            </LinearLayout>

            <View
                android:id="@+id/horizontal_divider_4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <LinearLayout
                android:id="@+id/help_favorite"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.9"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/padding">

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/help_favorite_icon"
                    android:layout_width="30dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/star"
                    />

                <TextView
                    android:id="@+id/help_favorite_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding"
                    android:layout_marginEnd="8dp"
                    android:gravity="start"
                    android:text="@string/no_favorite_businesses_subtext"
                    android:textSize="20sp" />

            </LinearLayout>

            <View
                android:id="@+id/horizontal_divider_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <LinearLayout
                android:id="@+id/help_call"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.1"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/padding">


                <ImageButton
                    android:id="@+id/help_call_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="?attr/colorPrimary"
                    android:maxWidth="25dp"
                    android:maxHeight="25dp"
                    android:src="@drawable/call_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/help_call_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding"
                    android:layout_marginEnd="8dp"
                    android:gravity="start"
                    android:text="@string/help_call"
                    android:textSize="20sp" />

            </LinearLayout>

            <View
                android:id="@+id/horizontal_divider_3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <LinearLayout
                android:id="@+id/help_save_contact"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/padding">


                <ImageButton
                    android:id="@+id/help_save_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="?attr/colorPrimary"
                    android:maxWidth="25dp"
                    android:maxHeight="25dp"
                    android:src="@drawable/save_contact_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/help_save_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding"
                    android:layout_marginEnd="8dp"
                    android:gravity="start"
                    android:text="@string/help_save"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>